# OOP-tasks

./: CMakeLists.txt  README.md  input.txt  main.cpp  output.txt
AddingNumbers/: AddingNum.cpp  AddingNum.h  CMakeLists.txt
BigInt/: BigInt.cpp  BigInt.h  CMakeLists.txt
bitarray/: BitArray.cpp  BitArray.h  CMakeLists.txt
tests/: CMakeLists.txt  adding_test.cpp  bitarr_test.cpp
